[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/player_sheet.png" type="Texture" id=1]
[ext_resource path="res://levels/level_tucas/enemies/enemy_resorte.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.05875, 15.1815 )

[node name="enemy_resorte" type="KinematicBody2D"]
motion/sync_to_physics = true
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 19
frame = 5

[node name="Tween" type="Tween" parent="."]
playback_speed = 2.0
playback/speed = 2.0

[node name="atTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="pullTimer" type="Timer" parent="."]

[connection signal="timeout" from="atTimer" to="." method="_on_atTimer_timeout"]
[connection signal="timeout" from="pullTimer" to="." method="_on_pullTimer_timeout"]
